# chat-order-excel-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  TODO.md  bootstrap.sh  cy_excel_mcp.py  pyproject.toml  start_cy_excel_mcp_http.sh
.githooks/: pre-commit
config/: mcporter.json.example  product_aliases.example.json
docs/: FIELD_MAPPING.md  OPENCLAW_DELIVERY_CHECKLIST.md  OPENCLAW_INTEGRATION.md  OPENCLAW_INTEGRATION.zh-CN.md  RUNNING.md  RUNNING.zh-CN.md
